[JENKINS-36102] add a rule to avoid clipping of tabs on Run Details in Safari 9+

--- a/less/theme.less
+++ b/less/theme.less
@@ -832,6 +832,12 @@ footer {
     }
 }
 
+@supports (overflow:-webkit-marquee) and (justify-content:inherit) {
+    .dialog .header .page-tabs {
+        margin-bottom: 22px;
+    }
+}
+
 .dialog .header {
     &.success {
         background-color: @brand-success;
